crates/lang/macro/tests/ui/fail/C-11-unsafe-constructor.stderr
error: ink! constructors must not be unsafe
  --> $DIR/C-11-unsafe-constructor.rs:10:13
   |
10 |         pub unsafe fn unsafe_constructor() -> Self {
   |             ^^^^^^
